--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,8 @@
 		<div class = 'navigation flex-col'>
 			<a href = '/' title = 'Home'><i class="fas fa-home"></i></a>
 			<a href = '/blacklist' title = 'Blacklist'><i class="fas fa-user-slash"></i></a>
-			<a href = '/settings' title = 'Settings'><i class="fas fa-cog"></i></a>
+			<a href = '/list' title = 'List'><i class="fas fa-exchange-alt"></i></a>
+			<a href = '/settings' title = 'Settings'></i><i class="fas fa-cog"></i></a>
 			<div class = 'stick-bottom flex-col'>
 				<a href = 'https://github.com/itslupus/burntbot' title = 'Github' target = '_blank'><i class="fab fa-github"></i></a>
 				<p>v{{ data['version'] }}</p>
