--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -197,7 +197,8 @@ p {
 	justify-content: space-between;
 }
 
-#swap-status {
+#swap-status,
+.list-user-status {
 	margin-top: 1rem;
 	padding: 0.25rem 0 0.25rem 0.5rem;
 	border-left: 2px solid var(--border-accent);
@@ -426,7 +427,11 @@ p#check-input-subtext {
 }
 
 .list-users-wrapper {
-	justify-content: space-between;
+	width: calc(75% + 2rem);
+}
+
+.list-users-wrapper > .rounded {
+	width: 29%;
 }
 
 .list-send-wrapper > * {
@@ -435,4 +440,38 @@ p#check-input-subtext {
 
 .list-send-wrapper > button#send {
 	float: right;
+}
+
+.list-user {
+	margin-top: 1rem;
+}
+
+.list-user > .list-user-header > * {
+	display: inline-block;
+}
+
+.list-user-header > .list-user-buttons > button {
+	min-width: 0;
+}
+
+.list-user-buttons > button {
+	margin-left: 0.5rem;
+}
+
+.list-header-input {
+	margin-top: 1rem;
+}
+
+#list-tag {
+	flex: 2;
+	margin-right: 1rem;
+}
+
+button > .loading {
+	top: -1px;
+	left: -3px;
+}
+
+.list-user-header {
+	align-items: center;
 }
