--- a/templates/list.html
+++ b/templates/list.html
@@ -78,7 +78,7 @@
 			})
 			.then((data) => {
 				if (data.ok) {
-					// window.location.reload();
+					window.location.reload();
 				}
 			});
 		}
