Removed debug message and fixed button size and colour

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -484,3 +484,8 @@ button > .loading {
 	font-size: 0.9rem;
 	color: var(--white);
 }
+
+.button-icon-override > * {
+	color: var(--white);
+	font-size: 0.9rem;
+}
