Changed poll rate to a minimum of 1 second and changed list swapping behaviour

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -15,8 +15,8 @@
 			<div class = 'setting'>
 				<div class = 'setting-header'>Poll Rate</div>
 				<div class = 'flex-row'>
-					<p>Change the rate at which the bot gets new transactions. (minimum: 4 seconds)</p>
-					<input id = 'setting-poll-rate' type = 'number' min = '0' value = '{{ data["poll_rate"] }}' autocomplete = 'off'>
+					<p>Change the rate at which the bot gets new transactions. (minimum: 1 second)</p>
+					<input id = 'setting-poll-rate' type = 'number' min = '1' value = '{{ data["poll_rate"] }}' autocomplete = 'off'>
 				</div>
 			</div>
 			<div class = 'setting'>
