--- a/templates/down.html
+++ b/templates/down.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<div class = 'down-wrapper flex-col'>
+			<!-- <img src = '{{ url_for("static", filename = "down.svg") }}'> -->
 			<i class="far fa-dizzy"></i>
 			<p>Oops, the bot is starting up.</p>
 			<p>Come back in a bit!</p>
