--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<title>burntbot</title>
-		<link href = '{{ url_for("static", filename = "css/styles.css") }}' rel = 'stylesheet' />
-		<link href = '{{ url_for("static", filename = "css/all.min.css") }}' rel = 'stylesheet' />
+		<link href = '{{ url_for("static", filename = "css/styles.css") }}' rel = 'stylesheet'>
+		<link href = '{{ url_for("static", filename = "css/all.min.css") }}' rel = 'stylesheet'>
 		<script src = '{{ url_for("static", filename = "js.js") }}'></script>
+		<link rel = 'shortcut icon' href = '{{ url_for("static", filename = "favicon.ico") }}'>
 	</head>
 	<body>
 		<div class = 'navigation flex-col'>
