Better handling of logged out sessions and removed debug lines

--- a/templates/down.html
+++ b/templates/down.html
@@ -9,8 +9,8 @@
 		<div class = 'down-wrapper flex-col'>
 			<!-- <img src = '{{ url_for("static", filename = "down.svg") }}'> -->
 			<i class="far fa-dizzy"></i>
-			<p>Oops, the bot is starting up.</p>
-			<p>Come back in a bit!</p>
+			<p>Oops, the bot crashed.</p>
+			<p>It's restarting right now, come back later!</p>
 		</div>
 	</body>
 </html>
