--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -562,6 +562,23 @@ button > .loading {
 	width: 47%;
 }
 
-#clear-modal {
+#clear-list {
 	color: var(--red);
+}
+
+#modal-wrapper {
+	z-index: 10;
+	position: fixed;
+	background-color: rgba(0, 0, 0, 0.8);
+	top: -3rem;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+#modal-content {
+	position: relative;
+	width: 40%;
+	margin: 10% auto;
+	background-color: rgb(29, 29, 29)
 }
